--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,38 +8,65 @@
     <title>Página Principal</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
 
-    <div>   
+    <header>
         <div class="logo">
-            <img src="assets/images/logo.png" width="200"/>
+            <a href="index.html"><img src="assets/images/logo4.png" width="200" / alt="Logo do site"></a>
         </div>
-    </div>
+    </header>
 
     <div class="bar"></div>
 
     <div class="content">
-        <div class="sidebar">
-            <h2>Título</h2>
+        <nav class="sidebar">
+            <h2>Titulos de jogos</h2>
             <ul>
-                <li><a href="#">Links</a></li>
+                <li><a href="valorant.html">Valorant</a></li>
+                <li><a href="lol.html">League of Legends</a></li>
+                <li><a href="fortnite.html">Fortnite</a></li>
             </ul>
-        </div>
+        </nav>
 
-        <div class="main">
-            
-        </div>
+        <main class="main">
+            <h1>Bem-vindo ao meu site de jogos!</h1>
+            <p>Explore os titulos que tem disponíveis e descubra dicas, truques e muito mais!</ p>
+            <p>Use o menu à esquerda para navegar entre os jogos.</p>
+            <p>Se você é fã de jogos como Valorant, League of Legends, Fortnite, este é o lugar certo para você!</p>
+            <p>Nosso site oferece uma variedade de informações, incluindo guias, notícias e atualizações sobre os jogos
+                mais populares.</p>
+            <p>Você encontrará dicas úteis para melhorar suas habilidades, estratégias para vencer partidas e muito
+                mais.</p>
+            <p>Se você está procurando por novidades, também temos uma seção dedicada a notícias sobre jogos, onde você
+                pode ficar por dentro dos últimos lançamentos e atualizações.</p>
+            <p>Divirta-se jogando!</p>
+            <p> Me chamo Rafael, gosto de games e para o projeto de uma wiki, escolhi criar um site no tema de games.
+            </p>
+            <p>Nas horas vagas além de jogar, costumo moderar lives na twitch e assistir alguns criadores de conteudo de
+                jogos</p>
+            <p>Alguns streamers que recomendo são:</p>
+            <p><a href="https://www.twitch.tv/ravenawhite">Ravena</a> sou moderador, então provavelmente você vai me ver
+                por lá, não me dê motivos para te banir, admito que gosto.</p>
+            <p><a href="https://www.twitch.tv/coreaovivo">Core</a> streamer de jogos variados</p>
+            <p><a href="https://www.twitch.tv/mafiiosa62">Mafi</a> streamer de jogos variados, mais voltada para
+                valorant e fortnite, mas com jogos diferentes alguns dias.</p>
+            <p><a href="https://www.twitch.tv/tixinhadois">Tixinha</a> ex-caster de valorant e league of legends, agora
+                streamando e criando conteudo de diversos jogos</p>
+            <p><a href="https://www.twitch.tv/alanzoka">Alanzoka</a> um dos maiores streamers brasileiros, senão o mais
+                conhecido</p>
+            <p><a href="https://www.twitch.tv/loud_coringa">Coringa</a> junto com o Alanzoka, um dos maiores streamers
+                brasileiros</p>
+        </main>
 
-        <div class="anchors">
-            <h2>Neste Artigo</h2>
-            <ul>
-                <li><a href="#">Âncoras</a></li>
-            </ul>
+        <div class=" anchors">
+
         </div>
     </div>
 
-    <div class="footer">
+    <footer class="footer">
 
-    </div>
+    </footer>
 </body>
+
 </html>
